<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/btnHalo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tampilkan Pesan"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/etNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:hint="@string/hint_nama"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:paddingHorizontal="12dp"/>

    <EditText
        android:id="@+id/etNim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:layout_marginTop="12dp"
        android:hint="@string/hint_nim"
        android:inputType="number"
        android:autofillHints="username"
        android:paddingHorizontal="12dp"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/button_submit"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvHasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_hasil"
        android:textSize="16sp"
        android:padding="12dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/Perbarui"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/Hapus"
        android:textStyle="bold"/>

</LinearLayout>
