<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:gravity="center">

    <Button
        android:id="@+id/btnNIM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buka_NIM"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnBukaWebDokumen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buka_Web_Dokumen"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnBukaDariAPI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buka_Dari_API"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnBukaCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buka_Camera"
        android:layout_marginTop="16dp" />

</LinearLayout>